# scantailor-advanced

./: .gitignore  .pdm-python  .pre-commit-config.yaml  .yamllint  AbstractCommand.h  AbstractRelinker.h  AtomicFileOverwriter.h  BackgroundExecutor.cpp  BackgroundExecutor.h  CMakeLists.txt  CommandLine.cpp  ConsoleBatch.cpp  ConsoleBatch.h  DebugImages.h  Despeckle.cpp  ErrorWidget.h  ImageFileInfo.cpp  ImageLoader.cpp  ImageMetadataLoader.cpp  ImageMetadataLoader.h  ImageViewBase.cpp  LoadFileTask.cpp  LoadFileTask.h  MainWindow.cpp  MainWindow.h  OpenGLSupport.cpp  OutOfMemoryDialog.cpp  OutOfMemoryDialog.h  OutOfMemoryHandler.h  PageId.cpp  PixmapRenderer.cpp  ProjectFilesDialog.cpp  ProjectPages.cpp  ProjectPages.h  ProjectReader.cpp  ProjectReader.h  ProjectWriter.cpp  ProjectWriter.h  README.md  RelinkablePath.cpp  (+20 more)
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/: dependabot.yml
.github/workflows/: test.yml
cmake/: default_cxxflags.cmake
crash_reporter/: CMakeLists.txt
dewarping/: CMakeLists.txt  Curve.cpp  Curve.h  CylindricalSurfaceDewarper.cpp  CylindricalSurfaceDewarper.h  DetectVertContentBounds.cpp  DistortionModel.cpp  DistortionModelBuilder.cpp  DistortionModelBuilder.h  RasterDewarper.cpp  TextLineRefiner.cpp  TextLineRefiner.h  TextLineTracer.cpp  TextLineTracer.h  TopBottomEdgeTracer.cpp  TopBottomEdgeTracer.h  TowardsLineTracer.cpp  TowardsLineTracer.h
docs/: conf.py  index.rst
filters/deskew/: CMakeLists.txt  ImageView.cpp  Task.cpp
filters/fix_orientation/: CMakeLists.txt
filters/output/: CMakeLists.txt  ColorParams.cpp  ColorPickupInteraction.cpp  DespeckleView.cpp  DewarpingView.cpp  FillColorProperty.cpp  FillColorProperty.h  FillZoneEditor.cpp  OptionsWidget.cpp  OutputGenerator.cpp  PictureLayerProperty.cpp  PictureLayerProperty.h  PictureZoneEditor.cpp  Task.cpp
filters/page_layout/: Alignment.cpp  CMakeLists.txt  CacheDrivenTask.cpp  Filter.cpp  Filter.h  ImageView.cpp  OptionsWidget.cpp  OrderByWidthProvider.cpp  Params.cpp  Settings.cpp  Settings.h
filters/page_split/: CMakeLists.txt  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  OptionsWidget.cpp  OptionsWidget.h  Task.cpp  Task.h
filters/select_content/: CMakeLists.txt  ImageView.cpp  Task.cpp
foundation/: CMakeLists.txt  GridLineTraverser.cpp  NonCopyable.h  VecNT.h
imageproc/: Binarize.cpp  BinaryImage.cpp  BinaryThreshold.cpp  BinaryThreshold.h  BitOps.cpp  CMakeLists.txt  ConnCompEraser.h  ConnectivityMap.h  GaussBlur.h  Grayscale.cpp  Grayscale.h  ImageViewBase.cpp  ImageViewBase.h  InfluenceMap.cpp  IntegralImage.h  PolygonRasterizer.cpp  PolynomialSurface.cpp  SavGolFilter.cpp  SavGolKernel.h  SeedFillGeneric.h
imageproc/tests/: CMakeLists.txt
interaction/: CMakeLists.txt  DragHandler.cpp  DraggableLineSegment.cpp  DraggableObject.h  DraggablePoint.cpp  InteractionHandler.cpp  InteractionHandler.h  InteractionState.h  InteractiveXSpline.cpp  InteractiveXSpline.h  ObjectDragHandler.h  ZoomHandler.cpp
math/: CMakeLists.txt  HomographicTransform.h  LineBoundedByRect.cpp  LinearFunction.h  LinearSolver.h  MatrixCalc.h  PolylineIntersector.cpp  PolylineIntersector.h  QuadraticFunction.h  ToLineProjector.h  XSpline.cpp  XSpline.h
math/adiff/: Function.h  SparseMap.h
math/adiff/tests/: TestHessians.cpp
math/spfit/: ConstraintSet.h  FittableSpline.h  FrenetFrame.h  Optimizer.cpp  Optimizer.h  PolylineModelShape.cpp  PolylineModelShape.h  SplineFitter.cpp  SplineFitter.h  SqDistApproximant.cpp  SqDistApproximant.h
math/spfit/tests/: CMakeLists.txt  TestSqDistApproximant.cpp
src/: MainWindow.cpp  main.cpp
src/app/: AboutDialog.ui  DefaultParamsDialog.cpp  MainWindow.cpp  ProjectFilesDialog.ui  StatusBarPanel.cpp
src/core/: ImageViewBase.cpp  ThumbnailBase.cpp  TiffWriter.cpp
src/core/filters/output/: BlackWhiteOptions.cpp  BlackWhiteOptions.h  CMakeLists.txt  OptionsWidget.cpp  OutputGenerator.cpp  SauvolaModBinarizationOptionsWidget.cpp  SauvolaModBinarizationOptionsWidget.h  SauvolaModBinarizationOptionsWidget.ui
src/core/filters/page_layout/: ImageView.cpp  OptionsWidget.ui  Thumbnail.cpp
src/core/filters/select_content/: ContentBoxFinder.cpp
src/core/zones/: ZoneContextMenuInteraction.cpp  ZoneDefaultInteraction.cpp  ZoneInteractionContext.cpp
src/dewarping/: CylindricalSurfaceDewarper.cpp  CylindricalSurfaceDewarper.h  DewarpingImageTransform.cpp  DistortionModelBuilder.cpp
src/foundation/: NonCopyable.h
src/imageproc/: AdjustBrightness.cpp  Binarize.cpp  Binarize.h  BinaryImage.h  Grayscale.h  ImageCombination.cpp  Posterizer.cpp  ReduceThreshold.cpp  Scale.cpp  SeedFillGeneric.h  SlicedHistogram.h  Transform.h  UpscaleIntegerTimes.h
src/math/spfit/: PolylineModelShape.h
src/scantailor/: __about__.py  __init__.py  __main__.py  main.py
src/scantailor/app/ui/: DefaultParamsDialog.ui  SettingsDialog.ui  __init__.py
src/scantailor/resources/: font-icons.xml  icons.xml  resources.qrc
src/scantailor/resources/win32/: resources.rc.in
src/scantailor/translations/: __init__.py
src/stages/deskew/: OptionsWidget.cpp
src/stages/output/: OptionsWidget.cpp  OptionsWidget.h  OutputGenerator.cpp  OutputGenerator.h
src/stages/page_layout/: Task.cpp
src/stages/select_content/: ContentBoxFinder.cpp  Task.cpp
tests/: CMakeLists.txt  test_version.py
zones/: CMakeLists.txt  EditableSpline.h  EditableZoneSet.h  SplineVertex.h  Zone.h  ZoneContextMenuInteraction.cpp  ZoneContextMenuInteraction.h  ZoneCreationInteraction.cpp  ZoneCreationInteraction.h  ZoneDefaultInteraction.cpp  ZoneDefaultInteraction.h  ZoneInteractionContext.cpp  ZoneVertexDragInteraction.cpp  ZoneVertexDragInteraction.h
